# zenith-viz

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  imgui.ini  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py
.github/workflows/: build_zenith.yml  cmake-multi-platform.yml
test/: test_zenith.py
zenith/: __init__.py  cpp_bindings.py  zenith.py
zenith/cpp/: Controls.cpp  Controls.hpp  Engine.cpp  Engine.hpp  GLBoilerPlate.cpp  GLBoilerPlate.hpp  GLModel.cpp  GLModel.hpp  PythonBindings._cpp  PythonBindings.cpp  main.cpp  vptree.hpp
zenith/cpp/imgui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
zenith_viz/: __init__.py  zenith_viz.py
zenith_viz/cpp/: Controls.hpp  Engine.hpp  GLBoilerPlate.hpp  PythonBindings.cpp
zenith_viz/cpp/glad/include/glad/: gl.h
zenith_viz/resources/: colors.yml
zenith_viz/shaders/: fragmentShader.shader  vertexShader.shader
